syntax = "proto3";

package event;
option go_package = "github.com/gurkanindibay/udemy-rest-api/proto/event";

import "google/protobuf/timestamp.proto";

service EventService {
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);
  rpc GetEvent(GetEventRequest) returns (GetEventResponse);
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse);
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse);
  rpc RegisterForEvent(RegisterForEventRequest) returns (RegisterForEventResponse);
  rpc CancelRegistration(CancelRegistrationRequest) returns (CancelRegistrationResponse);
  rpc GetUserRegistrations(GetUserRegistrationsRequest) returns (GetUserRegistrationsResponse);
}

message Event {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string location = 4;
  google.protobuf.Timestamp date_time = 5;
  int64 user_id = 6;
}

message GetEventsRequest {}

message GetEventsResponse {
  repeated Event events = 1;
}

message GetEventRequest {
  int64 id = 1;
}

message GetEventResponse {
  Event event = 1;
}

message CreateEventRequest {
  string name = 1;
  string description = 2;
  string location = 3;
  google.protobuf.Timestamp date_time = 4;
}

message CreateEventResponse {
  Event event = 1;
}

message UpdateEventRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string location = 4;
  google.protobuf.Timestamp date_time = 5;
}

message UpdateEventResponse {
  Event event = 1;
}

message DeleteEventRequest {
  int64 id = 1;
}

message DeleteEventResponse {}

message RegisterForEventRequest {
  int64 event_id = 1;
}

message RegisterForEventResponse {}

message CancelRegistrationRequest {
  int64 event_id = 1;
}

message CancelRegistrationResponse {}

message GetUserRegistrationsRequest {}

message GetUserRegistrationsResponse {
  repeated Event events = 1;
}